[gd_scene load_steps=60 format=2]

[ext_resource path="res://Scripts/UI/CharacterSelect.gd" type="Script" id=1]
[ext_resource path="res://Misc/UITheme.tres" type="Theme" id=2]
[ext_resource path="res://Sprites/Final/Characters/MaleBusinessMan/Idle/Youngbusinessman1.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Final/Characters/MaleBusinessMan/Idle/Youngbusinessman2.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Final/Characters/MaleBusinessMan/Idle/Youngbusinessman3.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Final/Characters/MaleBusinessMan/Idle/Youngbusinessman4.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Final/Characters/MaleCasual/Idle/Malecasual1.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Final/Characters/MaleCasual/Idle/Malecasual2.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Final/Characters/MaleCasual/Idle/Malecasual3.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Final/Characters/MaleCasual/Idle/Malecasual4.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Final/Characters/MaleStudent1/Idle/Malestudent1.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Final/Characters/MaleStudent1/Idle/Malestudent2.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Final/Characters/MaleStudent1/Idle/Malestudent3.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Final/Characters/MaleStudent1/Idle/Malestudent4.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Final/Characters/FemaleStudent/Idle/Femalestudent1.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Final/Characters/FemaleStudent/Idle/Femalestudent2.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Final/Characters/FemaleStudent/Idle/Femalestudent3.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Final/Characters/FemaleStudent/Idle/Femalestudent4.png" type="Texture" id=18]
[ext_resource path="res://Sprites/Final/Characters/MaleTraditional/Idle/Maletraditional1.png" type="Texture" id=19]
[ext_resource path="res://Sprites/Final/Characters/MaleTraditional/Idle/Maletraditional2.png" type="Texture" id=20]
[ext_resource path="res://Sprites/Final/Characters/MaleTraditional/Idle/Maletraditional3.png" type="Texture" id=21]
[ext_resource path="res://Sprites/Final/Characters/MaleTraditional/Idle/Maletraditional4.png" type="Texture" id=22]
[ext_resource path="res://Sprites/Final/Characters/FemaleElder/Idle/Femaleelder1.png" type="Texture" id=23]
[ext_resource path="res://Sprites/Final/Characters/FemaleElder/Idle/Femaleelder2.png" type="Texture" id=24]
[ext_resource path="res://Sprites/Final/Characters/FemaleElder/Idle/Femaleelder3.png" type="Texture" id=25]
[ext_resource path="res://Sprites/Final/Characters/FemaleElder/Idle/Femaleelder4.png" type="Texture" id=26]
[ext_resource path="res://Sprites/Final/Characters/FemaleTrendy/Idle/Femaletrendy1.png" type="Texture" id=27]
[ext_resource path="res://Sprites/Final/Characters/FemaleTrendy/Idle/Femaletrendy2.png" type="Texture" id=28]
[ext_resource path="res://Sprites/Final/Characters/FemaleTrendy/Idle/Femaletrendy3.png" type="Texture" id=29]
[ext_resource path="res://Sprites/Final/Characters/FemaleTrendy/Idle/Femaletrendy4.png" type="Texture" id=30]
[ext_resource path="res://Sprites/Final/Characters/FemaleBaker/Frames/Idle/FemalebakerIdle1.png" type="Texture" id=31]
[ext_resource path="res://Sprites/Final/Characters/FemaleBaker/Frames/Idle/FemalebakerIdle2.png" type="Texture" id=32]
[ext_resource path="res://Sprites/Final/Characters/FemaleBaker/Frames/Idle/FemalebakerIdle3.png" type="Texture" id=33]
[ext_resource path="res://Sprites/Final/Characters/FemaleBaker/Frames/Idle/FemalebakerIdle4.png" type="Texture" id=34]
[ext_resource path="res://Sprites/Final/Characters/MalePunk/Idle/Malepunk1.png" type="Texture" id=35]
[ext_resource path="res://Sprites/Final/Characters/MalePunk/Idle/Malepunk2.png" type="Texture" id=36]
[ext_resource path="res://Sprites/Final/Characters/MalePunk/Idle/Malepunk3.png" type="Texture" id=37]
[ext_resource path="res://Sprites/Final/Characters/MalePunk/Idle/Malepunk4.png" type="Texture" id=38]
[ext_resource path="res://Sprites/Final/Characters/MaleStudent/Idle/Malestudent1.png" type="Texture" id=39]
[ext_resource path="res://Sprites/Final/Characters/MaleStudent/Idle/Malestudent2.png" type="Texture" id=40]
[ext_resource path="res://Sprites/Final/Characters/MaleStudent/Idle/Malestudent3.png" type="Texture" id=41]
[ext_resource path="res://Sprites/Final/Characters/MaleStudent/Idle/Malestudent4.png" type="Texture" id=42]
[ext_resource path="res://Sprites/Final/Characters/ShibaInu/Idle/Shibainu1.png" type="Texture" id=43]
[ext_resource path="res://Sprites/Final/Characters/ShibaInu/Idle/Shibainu2.png" type="Texture" id=44]
[ext_resource path="res://Sprites/Final/Characters/ShibaInu/Idle/Shibainu3.png" type="Texture" id=45]
[ext_resource path="res://Sprites/Final/Characters/ShibaInu/Idle/Shibainu4.png" type="Texture" id=46]
[ext_resource path="res://Sprites/Final/Characters/MaleBusinessManOld/Idle/Oldbusinessman1.png" type="Texture" id=47]
[ext_resource path="res://Sprites/Final/Characters/MaleBusinessManOld/Idle/Oldbusinessman2.png" type="Texture" id=48]
[ext_resource path="res://Sprites/Final/Characters/MaleBusinessManOld/Idle/Oldbusinessman3.png" type="Texture" id=49]
[ext_resource path="res://Sprites/Final/Characters/MaleBusinessManOld/Idle/Oldbusinessman4.png" type="Texture" id=50]
[ext_resource path="res://Sprites/Final/Characters/FemaleOfficeWorker/Idle/Femaleofficeworker1.png" type="Texture" id=51]
[ext_resource path="res://Sprites/Final/Characters/FemaleOfficeWorker/Idle/Femaleofficeworker2.png" type="Texture" id=52]
[ext_resource path="res://Sprites/Final/Characters/FemaleOfficeWorker/Idle/Femaleofficeworker3.png" type="Texture" id=53]
[ext_resource path="res://Sprites/Final/Characters/FemaleOfficeWorker/Idle/Femaleofficeworker4.png" type="Texture" id=54]
[ext_resource path="res://Sprites/Final/Characters/MaleTrafficCop/Idle/Maletrafficcop1.png" type="Texture" id=55]
[ext_resource path="res://Sprites/Final/Characters/MaleTrafficCop/Idle/Maletrafficcop2.png" type="Texture" id=56]
[ext_resource path="res://Sprites/Final/Characters/MaleTrafficCop/Idle/Maletrafficcop3.png" type="Texture" id=57]
[ext_resource path="res://Sprites/Final/Characters/MaleTrafficCop/Idle/Maletrafficcop4.png" type="Texture" id=58]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "BusinessMan",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "Casual",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "Student3",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ) ],
"loop": true,
"name": "Student1",
"speed": 5.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ) ],
"loop": true,
"name": "Robes",
"speed": 5.0
}, {
"frames": [ ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ) ],
"loop": true,
"name": "Elder",
"speed": 5.0
}, {
"frames": [ ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ) ],
"loop": true,
"name": "Trendy",
"speed": 5.0
}, {
"frames": [ ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ) ],
"loop": true,
"name": "Baker",
"speed": 0.0
}, {
"frames": [ ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ) ],
"loop": true,
"name": "Punk",
"speed": 5.0
}, {
"frames": [ ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ) ],
"loop": true,
"name": "Student2",
"speed": 5.0
}, {
"frames": [ ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ) ],
"loop": true,
"name": "Dog",
"speed": 5.0
}, {
"frames": [ ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ) ],
"loop": true,
"name": "OldBusinessMan",
"speed": 5.0
}, {
"frames": [ ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ) ],
"loop": true,
"name": "OfficeWorker",
"speed": 5.0
}, {
"frames": [ ExtResource( 55 ), ExtResource( 56 ), ExtResource( 57 ), ExtResource( 58 ) ],
"loop": true,
"name": "TrafficCop",
"speed": 5.0
} ]

[node name="CharacterSelect" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 10

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 144.0
margin_top = 48.0
margin_right = -144.0
margin_bottom = -48.0
theme = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/PanelContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 732.0
margin_bottom = 476.0

[node name="Left" type="Button" parent="CanvasLayer/PanelContainer/HBoxContainer"]
margin_right = 54.0
margin_bottom = 472.0
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "     <   "

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PanelContainer/HBoxContainer"]
margin_left = 58.0
margin_right = 670.0
margin_bottom = 472.0
size_flags_horizontal = 3

[node name="PanelContainer2" type="PanelContainer" parent="CanvasLayer/PanelContainer/HBoxContainer/VBoxContainer"]
margin_right = 612.0
margin_bottom = 448.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 452.0
margin_right = 612.0
margin_bottom = 472.0

[node name="Select" type="Button" parent="CanvasLayer/PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 304.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Select this Character"

[node name="Rotate" type="Button" parent="CanvasLayer/PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 308.0
margin_right = 612.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Rotate"

[node name="Right" type="Button" parent="CanvasLayer/PanelContainer/HBoxContainer"]
margin_left = 674.0
margin_right = 728.0
margin_bottom = 472.0
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "    >    "

[node name="CharacterDisplay" type="AnimatedSprite" parent="CanvasLayer"]
position = Vector2( 514, 256 )
scale = Vector2( 10, 10 )
frames = SubResource( 1 )
animation = "Baker"

[node name="Label" type="Label" parent="CanvasLayer"]
margin_left = 288.0
margin_top = 464.0
margin_right = 732.0
margin_bottom = 488.0
theme = ExtResource( 2 )
text = "Dog"
align = 1
[connection signal="pressed" from="CanvasLayer/PanelContainer/HBoxContainer/Left" to="." method="_on_Left_pressed"]
[connection signal="pressed" from="CanvasLayer/PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer/Select" to="." method="_on_Select_pressed"]
[connection signal="pressed" from="CanvasLayer/PanelContainer/HBoxContainer/VBoxContainer/HBoxContainer/Rotate" to="." method="_on_Rotate_pressed"]
[connection signal="pressed" from="CanvasLayer/PanelContainer/HBoxContainer/Right" to="." method="_on_Right_pressed"]
